--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@react-google-maps/api": "^2.20.6",
+    "@tanstack/react-query": "^5.67.1",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-day-picker": "^9.5.1",
-    "react-dom": "^19.0.0",
+    "ol": "^10.4.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^3.0.2",
